# uiwidgets

./: CMakeLists.txt  README.txt  buffer.cpp  buffer.h  camera.cpp  camera.h  event.h  font.cpp  font.h  font_render.cpp  font_render.h  framebuffer.cpp  framebuffer.h  glm_includes.h  line_render.h  node.cpp  node.h  popup_menu.cpp  popup_menu.h  rect_render.h  render.cpp  render.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  test-widgets.cpp  texture.cpp  texture.h  ui.cpp  ui.h  vertex.h  widget.cpp  widget.h
cmake/: FindGLFW3.cmake
resources/: line.vs  lines.fs  poly.fs  poly.vs  rect_solid.fs  rect_texture.fs  simple_one_mat.vs  text.vs
